2002-05-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: GnomeVFS is no longer a dependency.

	* libgda/gda-init.c (gda_init): don't call gnome_vfs_init.

	* libgda/gda-util.c (gda_file_save):
	(gda_file_load): changed to not use GnomeVFS.

2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-client.c: fixed SIGSEGV when freeing the provider hash.

	* gda-recordset.c: remove local variable left by mistake.
	
	* gda-row.c (gda_row_attributes_get_length): allow NULL as input.
	This is a temporary fix until we have get_n_rows for recorsets.

2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c:
	* libgda/gda-recordset.c: fixes to correctly overwrite global
	configuration with the one provided by the user.

2002-05-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-recordset.c (gda_recordset_get_connection): added missing
	function.

	* data/Makefile.am: removed GConf stuff.

	* data/libgda.schemas: removed.

2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-recordset.c: 
	(gda_recordset_get_value_at): fixed little bug.

	* libgda/Makefile.am:
	* libgda/gda-config.c: reimplemented configuration stuff without
	using gconf.

	* configure.in: removed gconf stuff.

	* testing/client.c:
	* testing/postgres-test.h: activate postgres tests.

	* data/Makefile.am:
	* data/config: new file with default global configuration for libgda.

2002-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-recordset.c (gda_recordset_get_n_rows): implemented.
	(gda_recordset_get_n_columns): implemented.
	(gda_recordset_get_value_at): made it work.

2002-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_get_provider_list): only load
	*real* plugins (.so files).

	* libgda/gda-recordset.[ch] (gda_recordset_new): added extra
	parameter, to be passed over to the callback functions.

	* libgda/gda-client.c (gda_client_open_connection): g_object_ref the