@@ -3,7 +3,7 @@
 	<section path="/apps/libgda/Datasources/Default">
 		<entry name="Provider" type="string" value="Default"/>
 		<entry name="Username" type="string" value="nouser"/>
-		<entry name="DSN" type="string" value="/tmp/gnome-db-test.db"/>
+		<entry name="DSN" type="string" value="URI=/tmp/gnome-db-test.db"/>
 		<entry name="Description" type="string" value="Default libgda provider"/>
 	</section>
 </libgda-config>
