@@ -24,6 +24,11 @@
 #include <libgda/gda-intl.h>
 #include "gda-postgres-provider.h"
 
+const gchar *plugin_get_name (void);
+const gchar *plugin_get_description (void);
+GList *plugin_get_connection_params (void);
+GdaServerProvider *plugin_create_provider (void);
+
 const gchar *
 plugin_get_name (void)
 {
